// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaskedInput /> MaskedInput: should render input as a disabled field 1`] = `
<ThemeProvider
  theme={
    Object {
      "accordionDividerBorderColor": "#2c3037",
      "accordionHeaderHeight": "45px",
      "bodyBackground": "#292d33",
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "buttonActiveBoxShadow": "inset 0 3px 5px rgba($black, .125)",
      "buttonBorderRadius": "4px",
      "buttonBorderWidth": "1px",
      "buttonDisabledOpacity": 0.65,
      "buttonFocusBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "buttonFontColor": "#fff",
      "buttonFontSize": "13px",
      "buttonFontSizeLarge": "15px",
      "buttonFontSizeSmall": "11px",
      "buttonFontWeight": 300,
      "buttonLineHeight": 1.5,
      "buttonLineHeightLarge": 1.333,
      "buttonLineHeightSmall": 1.5,
      "buttonPaddingSmall": "9px",
      "buttonPaddingX": "15px",
      "buttonPaddingXLarge": "27px",
      "buttonPaddingXSmall": "5px",
      "buttonPaddingY": "10px",
      "buttonPaddingYLarge": "18px",
      "buttonPaddingYSmall": "6px",
      "buttonPaddingYXSmall": "1px",
      "colors": Object {
        "black": "#000",
        "green100": "#00bc8c",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey1300": "#2c3037",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#d28a2e",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "dangerColor": "#cb3548",
      "drawerBackgroundColor": "#343a42",
      "drawerBoxShadow": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
      "drawerPadding": "10px 15px",
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "h1FontSize": "24px",
      "h1LineHeight": 1.5,
      "h2FontSize": "18px",
      "h2LineHeight": 1.333,
      "h3FontSize": "15px",
      "h3LineHeight": 1.333,
      "h4FontSize": "13px",
      "h4LineHeight": 1.153,
      "h5FontSize": "11px",
      "h5LineHeight": "11px",
      "headingFontWeightBold": 600,
      "headingFontWeightLight": 400,
      "headingSpacing": "10px",
      "horizontalTabButtonBackgroundColor": "#343a42",
      "horizontalTabButtonBorderRadius": "4px",
      "horizontalTabButtonColor": "#96a2b0",
      "horizontalTabButtonColorActive": "#fff",
      "horizontalTabButtonPadding": "10px 15px",
      "horizontalTabButtonSpacingRight": "1px",
      "horizontalTabContainerBackgroundColor": "#343a42",
      "horizontalTabContainerPadding": "10px 15px",
      "indicatorCheckedColor": "#96a2b0",
      "indicatorColor": "#3f454d",
      "indicatorSpacingRight": "5px",
      "infoColor": "#2bdbdb",
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFeedbackFontSize": "13px",
      "inputFeedbackFontWeight": 600,
      "inputFeedbackSpacing": "5px",
      "inputFontSize": "13px",
      "inputFontWeight": 300,
      "inputInvisibleHeight": "38px",
      "inputLineHeight": "40px",
      "inputPadding": "10px 15px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "labelBottomSpacing": "5px",
      "labelFontSize": "11px",
      "labelFontWeight": 400,
      "labelTextColor": "#96a2b0",
      "labelTextColorError": "#cb3548",
      "lineHeightBase": 1.5,
      "mainBackground": "343941",
      "minHeight": "10rem",
      "modalBackgroundColor": "#292d33",
      "modalBorderColor": "#3f454d",
      "modalBorderRadius": "4px",
      "modalBorderStyle": "solid",
      "modalBoxShadow": "0 2px 4px 0 rgba(0, 0, 0, 0.5)",
      "modalMaxWidth": "60rem",
      "modalMinWidth": "20rem",
      "modalOutline": 0,
      "modalWidth": "80%",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "radioFontWeight": 400,
      "radioInactiveBorderColor": "#8C9BA5",
      "radioSpacingRight": "10px",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacing": "10px",
      "spinnerOverlayBackgroundColor": "rgba(52, 58, 66, 0.8)",
      "successColor": "#00bc8c",
      "switcherBorderColor": "#3f454d",
      "switcherBoxShadow": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      "switcherSpacingRight": "10px",
      "textColor": "#fff",
      "textFontFamily": "\\"Open Sans\\", sans-serif",
      "textFontSize": "13px",
      "textFontSizeLarge": "18px",
      "textFontSizeSmall": "13px",
      "textFontSizeXLarge": "24px",
      "textFontSizeXSmall": "11px",
      "textFontWeight": 400,
      "textFontWeightLight": 300,
      "textSpacing": "10px 15px",
      "timeSpanDisplayTextColor": "#96a2b0",
      "tooltipBackgroundColor": "#292d33",
      "tooltipBorderColor": "#40464f",
      "tooltipBorderRadius": "4px",
      "tooltipFontSize": "11px",
      "tooltipHoverOpacity": 0.9,
      "tooltipTextColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "verticalTabButtonActiveBackgroundColor": "#23262C",
      "verticalTabButtonActiveTextColor": "#3f9bfd",
      "verticalTabButtonBackgroundColor": "#24282E",
      "verticalTabButtonPadding": "10px 15px",
      "verticalTabButtonSpacingRight": "1px",
      "verticalTabButtonTextColor": "#fff",
      "verticalTabContainerBackgroundColor": "#343a42",
      "verticalTabContainerPadding": "10px 15px",
      "verticalTabSidebarBackgroundColor": "#292D33",
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "modalContent": 2060,
        "modalOverlay": 2050,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
>
  <InputMask
    disabled={true}
    guide={false}
    id="currency"
    mask={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="$"
  >
    <t
      disabled={true}
      guide={false}
      id="currency"
      mask={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="$"
      render={[Function]}
    >
      <Input
        disabled={true}
        id="currency"
        inputRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="$"
      >
        <Input__InputStyled
          disabled={true}
          id="currency"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="$"
        >
          <input
            className="Input__InputStyled-cpajrE jcUKAH"
            disabled={true}
            id="currency"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="$"
          />
        </Input__InputStyled>
      </Input>
    </t>
  </InputMask>
</ThemeProvider>
`;

exports[`<MaskedInput /> MaskedInput: should render input with hasError prop as true 1`] = `
<ThemeProvider
  theme={
    Object {
      "accordionDividerBorderColor": "#2c3037",
      "accordionHeaderHeight": "45px",
      "bodyBackground": "#292d33",
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "buttonActiveBoxShadow": "inset 0 3px 5px rgba($black, .125)",
      "buttonBorderRadius": "4px",
      "buttonBorderWidth": "1px",
      "buttonDisabledOpacity": 0.65,
      "buttonFocusBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "buttonFontColor": "#fff",
      "buttonFontSize": "13px",
      "buttonFontSizeLarge": "15px",
      "buttonFontSizeSmall": "11px",
      "buttonFontWeight": 300,
      "buttonLineHeight": 1.5,
      "buttonLineHeightLarge": 1.333,
      "buttonLineHeightSmall": 1.5,
      "buttonPaddingSmall": "9px",
      "buttonPaddingX": "15px",
      "buttonPaddingXLarge": "27px",
      "buttonPaddingXSmall": "5px",
      "buttonPaddingY": "10px",
      "buttonPaddingYLarge": "18px",
      "buttonPaddingYSmall": "6px",
      "buttonPaddingYXSmall": "1px",
      "colors": Object {
        "black": "#000",
        "green100": "#00bc8c",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey1300": "#2c3037",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#d28a2e",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "dangerColor": "#cb3548",
      "drawerBackgroundColor": "#343a42",
      "drawerBoxShadow": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
      "drawerPadding": "10px 15px",
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "h1FontSize": "24px",
      "h1LineHeight": 1.5,
      "h2FontSize": "18px",
      "h2LineHeight": 1.333,
      "h3FontSize": "15px",
      "h3LineHeight": 1.333,
      "h4FontSize": "13px",
      "h4LineHeight": 1.153,
      "h5FontSize": "11px",
      "h5LineHeight": "11px",
      "headingFontWeightBold": 600,
      "headingFontWeightLight": 400,
      "headingSpacing": "10px",
      "horizontalTabButtonBackgroundColor": "#343a42",
      "horizontalTabButtonBorderRadius": "4px",
      "horizontalTabButtonColor": "#96a2b0",
      "horizontalTabButtonColorActive": "#fff",
      "horizontalTabButtonPadding": "10px 15px",
      "horizontalTabButtonSpacingRight": "1px",
      "horizontalTabContainerBackgroundColor": "#343a42",
      "horizontalTabContainerPadding": "10px 15px",
      "indicatorCheckedColor": "#96a2b0",
      "indicatorColor": "#3f454d",
      "indicatorSpacingRight": "5px",
      "infoColor": "#2bdbdb",
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFeedbackFontSize": "13px",
      "inputFeedbackFontWeight": 600,
      "inputFeedbackSpacing": "5px",
      "inputFontSize": "13px",
      "inputFontWeight": 300,
      "inputInvisibleHeight": "38px",
      "inputLineHeight": "40px",
      "inputPadding": "10px 15px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "labelBottomSpacing": "5px",
      "labelFontSize": "11px",
      "labelFontWeight": 400,
      "labelTextColor": "#96a2b0",
      "labelTextColorError": "#cb3548",
      "lineHeightBase": 1.5,
      "mainBackground": "343941",
      "minHeight": "10rem",
      "modalBackgroundColor": "#292d33",
      "modalBorderColor": "#3f454d",
      "modalBorderRadius": "4px",
      "modalBorderStyle": "solid",
      "modalBoxShadow": "0 2px 4px 0 rgba(0, 0, 0, 0.5)",
      "modalMaxWidth": "60rem",
      "modalMinWidth": "20rem",
      "modalOutline": 0,
      "modalWidth": "80%",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "radioFontWeight": 400,
      "radioInactiveBorderColor": "#8C9BA5",
      "radioSpacingRight": "10px",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacing": "10px",
      "spinnerOverlayBackgroundColor": "rgba(52, 58, 66, 0.8)",
      "successColor": "#00bc8c",
      "switcherBorderColor": "#3f454d",
      "switcherBoxShadow": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      "switcherSpacingRight": "10px",
      "textColor": "#fff",
      "textFontFamily": "\\"Open Sans\\", sans-serif",
      "textFontSize": "13px",
      "textFontSizeLarge": "18px",
      "textFontSizeSmall": "13px",
      "textFontSizeXLarge": "24px",
      "textFontSizeXSmall": "11px",
      "textFontWeight": 400,
      "textFontWeightLight": 300,
      "textSpacing": "10px 15px",
      "timeSpanDisplayTextColor": "#96a2b0",
      "tooltipBackgroundColor": "#292d33",
      "tooltipBorderColor": "#40464f",
      "tooltipBorderRadius": "4px",
      "tooltipFontSize": "11px",
      "tooltipHoverOpacity": 0.9,
      "tooltipTextColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "verticalTabButtonActiveBackgroundColor": "#23262C",
      "verticalTabButtonActiveTextColor": "#3f9bfd",
      "verticalTabButtonBackgroundColor": "#24282E",
      "verticalTabButtonPadding": "10px 15px",
      "verticalTabButtonSpacingRight": "1px",
      "verticalTabButtonTextColor": "#fff",
      "verticalTabContainerBackgroundColor": "#343a42",
      "verticalTabContainerPadding": "10px 15px",
      "verticalTabSidebarBackgroundColor": "#292D33",
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "modalContent": 2060,
        "modalOverlay": 2050,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
>
  <InputMask
    guide={false}
    id="currency"
    mask={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="$"
  >
    <t
      guide={false}
      id="currency"
      mask={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="$"
      render={[Function]}
    >
      <Input
        id="currency"
        inputRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="$"
      >
        <Input__InputStyled
          id="currency"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="$"
        >
          <input
            className="Input__InputStyled-cpajrE gnkefq"
            id="currency"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="$"
          />
        </Input__InputStyled>
      </Input>
    </t>
  </InputMask>
</ThemeProvider>
`;

exports[`<MaskedInput /> should render the component with \`birthday mask\` 1`] = `
<ThemeProvider
  theme={
    Object {
      "accordionDividerBorderColor": "#2c3037",
      "accordionHeaderHeight": "45px",
      "bodyBackground": "#292d33",
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "buttonActiveBoxShadow": "inset 0 3px 5px rgba($black, .125)",
      "buttonBorderRadius": "4px",
      "buttonBorderWidth": "1px",
      "buttonDisabledOpacity": 0.65,
      "buttonFocusBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "buttonFontColor": "#fff",
      "buttonFontSize": "13px",
      "buttonFontSizeLarge": "15px",
      "buttonFontSizeSmall": "11px",
      "buttonFontWeight": 300,
      "buttonLineHeight": 1.5,
      "buttonLineHeightLarge": 1.333,
      "buttonLineHeightSmall": 1.5,
      "buttonPaddingSmall": "9px",
      "buttonPaddingX": "15px",
      "buttonPaddingXLarge": "27px",
      "buttonPaddingXSmall": "5px",
      "buttonPaddingY": "10px",
      "buttonPaddingYLarge": "18px",
      "buttonPaddingYSmall": "6px",
      "buttonPaddingYXSmall": "1px",
      "colors": Object {
        "black": "#000",
        "green100": "#00bc8c",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey1300": "#2c3037",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#d28a2e",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "dangerColor": "#cb3548",
      "drawerBackgroundColor": "#343a42",
      "drawerBoxShadow": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
      "drawerPadding": "10px 15px",
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "h1FontSize": "24px",
      "h1LineHeight": 1.5,
      "h2FontSize": "18px",
      "h2LineHeight": 1.333,
      "h3FontSize": "15px",
      "h3LineHeight": 1.333,
      "h4FontSize": "13px",
      "h4LineHeight": 1.153,
      "h5FontSize": "11px",
      "h5LineHeight": "11px",
      "headingFontWeightBold": 600,
      "headingFontWeightLight": 400,
      "headingSpacing": "10px",
      "horizontalTabButtonBackgroundColor": "#343a42",
      "horizontalTabButtonBorderRadius": "4px",
      "horizontalTabButtonColor": "#96a2b0",
      "horizontalTabButtonColorActive": "#fff",
      "horizontalTabButtonPadding": "10px 15px",
      "horizontalTabButtonSpacingRight": "1px",
      "horizontalTabContainerBackgroundColor": "#343a42",
      "horizontalTabContainerPadding": "10px 15px",
      "indicatorCheckedColor": "#96a2b0",
      "indicatorColor": "#3f454d",
      "indicatorSpacingRight": "5px",
      "infoColor": "#2bdbdb",
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFeedbackFontSize": "13px",
      "inputFeedbackFontWeight": 600,
      "inputFeedbackSpacing": "0px",
      "inputFontSize": "13px",
      "inputFontWeight": 300,
      "inputInvisibleHeight": "38px",
      "inputLineHeight": "40px",
      "inputPadding": "10px 15px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "labelBottomSpacing": "5px",
      "labelFontSize": "11px",
      "labelFontWeight": 400,
      "labelTextColor": "#96a2b0",
      "labelTextColorError": "#cb3548",
      "lineHeightBase": 1.5,
      "mainBackground": "343941",
      "minHeight": "10rem",
      "modalBackgroundColor": "#292d33",
      "modalBorderColor": "#3f454d",
      "modalBorderRadius": "4px",
      "modalBorderStyle": "solid",
      "modalBoxShadow": "0 2px 4px 0 rgba(0, 0, 0, 0.5)",
      "modalMaxWidth": "60rem",
      "modalMinWidth": "20rem",
      "modalOutline": 0,
      "modalWidth": "80%",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "radioFontWeight": 400,
      "radioInactiveBorderColor": "#8C9BA5",
      "radioSpacingRight": "10px",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacing": "10px",
      "spinnerOverlayBackgroundColor": "rgba(52, 58, 66, 0.8)",
      "successColor": "#00bc8c",
      "switcherBorderColor": "#3f454d",
      "switcherBoxShadow": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      "switcherSpacingRight": "10px",
      "textColor": "#fff",
      "textFontFamily": "\\"Open Sans\\", sans-serif",
      "textFontSize": "13px",
      "textFontSizeLarge": "18px",
      "textFontSizeSmall": "13px",
      "textFontSizeXLarge": "24px",
      "textFontSizeXSmall": "11px",
      "textFontWeight": 400,
      "textFontWeightLight": 300,
      "textSpacing": "10px 15px",
      "timeSpanDisplayTextColor": "#96a2b0",
      "tooltipBackgroundColor": "#292d33",
      "tooltipBorderColor": "#40464f",
      "tooltipBorderRadius": "4px",
      "tooltipFontSize": "11px",
      "tooltipHoverOpacity": 0.9,
      "tooltipTextColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "verticalTabButtonActiveBackgroundColor": "#23262C",
      "verticalTabButtonActiveTextColor": "#3f9bfd",
      "verticalTabButtonBackgroundColor": "#24282E",
      "verticalTabButtonPadding": "10px 15px",
      "verticalTabButtonSpacingRight": "1px",
      "verticalTabButtonTextColor": "#fff",
      "verticalTabContainerBackgroundColor": "#343a42",
      "verticalTabContainerPadding": "10px 15px",
      "verticalTabSidebarBackgroundColor": "#292D33",
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "modalContent": 2060,
        "modalOverlay": 2050,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
>
  <InputMask
    guide={true}
    id="birthday"
    mask={
      Array [
        /\\\\d/,
        /\\\\d/,
        ".",
        /\\\\d/,
        /\\\\d/,
        ".",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="DD.MM.YYYY"
  >
    <t
      guide={true}
      id="birthday"
      mask={
        Array [
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          ".",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
        ]
      }
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="DD.MM.YYYY"
      render={[Function]}
    >
      <Input
        id="birthday"
        inputRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="DD.MM.YYYY"
      >
        <Input__InputStyled
          id="birthday"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="DD.MM.YYYY"
        >
          <input
            className="Input__InputStyled-cpajrE gnkefq"
            id="birthday"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="DD.MM.YYYY"
          />
        </Input__InputStyled>
      </Input>
    </t>
  </InputMask>
</ThemeProvider>
`;

exports[`<MaskedInput /> should render the component with \`currency mask\` 1`] = `
<ThemeProvider
  theme={
    Object {
      "accordionDividerBorderColor": "#2c3037",
      "accordionHeaderHeight": "45px",
      "bodyBackground": "#292d33",
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "buttonActiveBoxShadow": "inset 0 3px 5px rgba($black, .125)",
      "buttonBorderRadius": "4px",
      "buttonBorderWidth": "1px",
      "buttonDisabledOpacity": 0.65,
      "buttonFocusBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "buttonFontColor": "#fff",
      "buttonFontSize": "13px",
      "buttonFontSizeLarge": "15px",
      "buttonFontSizeSmall": "11px",
      "buttonFontWeight": 300,
      "buttonLineHeight": 1.5,
      "buttonLineHeightLarge": 1.333,
      "buttonLineHeightSmall": 1.5,
      "buttonPaddingSmall": "9px",
      "buttonPaddingX": "15px",
      "buttonPaddingXLarge": "27px",
      "buttonPaddingXSmall": "5px",
      "buttonPaddingY": "10px",
      "buttonPaddingYLarge": "18px",
      "buttonPaddingYSmall": "6px",
      "buttonPaddingYXSmall": "1px",
      "colors": Object {
        "black": "#000",
        "green100": "#00bc8c",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey1300": "#2c3037",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#d28a2e",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "dangerColor": "#cb3548",
      "drawerBackgroundColor": "#343a42",
      "drawerBoxShadow": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
      "drawerPadding": "10px 15px",
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "h1FontSize": "24px",
      "h1LineHeight": 1.5,
      "h2FontSize": "18px",
      "h2LineHeight": 1.333,
      "h3FontSize": "15px",
      "h3LineHeight": 1.333,
      "h4FontSize": "13px",
      "h4LineHeight": 1.153,
      "h5FontSize": "11px",
      "h5LineHeight": "11px",
      "headingFontWeightBold": 600,
      "headingFontWeightLight": 400,
      "headingSpacing": "10px",
      "horizontalTabButtonBackgroundColor": "#343a42",
      "horizontalTabButtonBorderRadius": "4px",
      "horizontalTabButtonColor": "#96a2b0",
      "horizontalTabButtonColorActive": "#fff",
      "horizontalTabButtonPadding": "10px 15px",
      "horizontalTabButtonSpacingRight": "1px",
      "horizontalTabContainerBackgroundColor": "#343a42",
      "horizontalTabContainerPadding": "10px 15px",
      "indicatorCheckedColor": "#96a2b0",
      "indicatorColor": "#3f454d",
      "indicatorSpacingRight": "5px",
      "infoColor": "#2bdbdb",
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFeedbackFontSize": "13px",
      "inputFeedbackFontWeight": 600,
      "inputFeedbackSpacing": "0px",
      "inputFontSize": "13px",
      "inputFontWeight": 300,
      "inputInvisibleHeight": "38px",
      "inputLineHeight": "40px",
      "inputPadding": "10px 15px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "labelBottomSpacing": "5px",
      "labelFontSize": "11px",
      "labelFontWeight": 400,
      "labelTextColor": "#96a2b0",
      "labelTextColorError": "#cb3548",
      "lineHeightBase": 1.5,
      "mainBackground": "343941",
      "minHeight": "10rem",
      "modalBackgroundColor": "#292d33",
      "modalBorderColor": "#3f454d",
      "modalBorderRadius": "4px",
      "modalBorderStyle": "solid",
      "modalBoxShadow": "0 2px 4px 0 rgba(0, 0, 0, 0.5)",
      "modalMaxWidth": "60rem",
      "modalMinWidth": "20rem",
      "modalOutline": 0,
      "modalWidth": "80%",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "radioFontWeight": 400,
      "radioInactiveBorderColor": "#8C9BA5",
      "radioSpacingRight": "10px",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacing": "10px",
      "spinnerOverlayBackgroundColor": "rgba(52, 58, 66, 0.8)",
      "successColor": "#00bc8c",
      "switcherBorderColor": "#3f454d",
      "switcherBoxShadow": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      "switcherSpacingRight": "10px",
      "textColor": "#fff",
      "textFontFamily": "\\"Open Sans\\", sans-serif",
      "textFontSize": "13px",
      "textFontSizeLarge": "18px",
      "textFontSizeSmall": "13px",
      "textFontSizeXLarge": "24px",
      "textFontSizeXSmall": "11px",
      "textFontWeight": 400,
      "textFontWeightLight": 300,
      "textSpacing": "10px 15px",
      "timeSpanDisplayTextColor": "#96a2b0",
      "tooltipBackgroundColor": "#292d33",
      "tooltipBorderColor": "#40464f",
      "tooltipBorderRadius": "4px",
      "tooltipFontSize": "11px",
      "tooltipHoverOpacity": 0.9,
      "tooltipTextColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "verticalTabButtonActiveBackgroundColor": "#23262C",
      "verticalTabButtonActiveTextColor": "#3f9bfd",
      "verticalTabButtonBackgroundColor": "#24282E",
      "verticalTabButtonPadding": "10px 15px",
      "verticalTabButtonSpacingRight": "1px",
      "verticalTabButtonTextColor": "#fff",
      "verticalTabContainerBackgroundColor": "#343a42",
      "verticalTabContainerPadding": "10px 15px",
      "verticalTabSidebarBackgroundColor": "#292D33",
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "modalContent": 2060,
        "modalOverlay": 2050,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
>
  <InputMask
    guide={false}
    id="currency"
    mask={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="$"
  >
    <t
      guide={false}
      id="currency"
      mask={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="$"
      render={[Function]}
    >
      <Input
        id="currency"
        inputRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="$"
      >
        <Input__InputStyled
          id="currency"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="$"
        >
          <input
            className="Input__InputStyled-cpajrE gnkefq"
            id="currency"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="$"
          />
        </Input__InputStyled>
      </Input>
    </t>
  </InputMask>
</ThemeProvider>
`;

exports[`<MaskedInput /> should render the component with \`email mask\` 1`] = `
<ThemeProvider
  theme={
    Object {
      "accordionDividerBorderColor": "#2c3037",
      "accordionHeaderHeight": "45px",
      "bodyBackground": "#292d33",
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "buttonActiveBoxShadow": "inset 0 3px 5px rgba($black, .125)",
      "buttonBorderRadius": "4px",
      "buttonBorderWidth": "1px",
      "buttonDisabledOpacity": 0.65,
      "buttonFocusBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "buttonFontColor": "#fff",
      "buttonFontSize": "13px",
      "buttonFontSizeLarge": "15px",
      "buttonFontSizeSmall": "11px",
      "buttonFontWeight": 300,
      "buttonLineHeight": 1.5,
      "buttonLineHeightLarge": 1.333,
      "buttonLineHeightSmall": 1.5,
      "buttonPaddingSmall": "9px",
      "buttonPaddingX": "15px",
      "buttonPaddingXLarge": "27px",
      "buttonPaddingXSmall": "5px",
      "buttonPaddingY": "10px",
      "buttonPaddingYLarge": "18px",
      "buttonPaddingYSmall": "6px",
      "buttonPaddingYXSmall": "1px",
      "colors": Object {
        "black": "#000",
        "green100": "#00bc8c",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey1300": "#2c3037",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#d28a2e",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "dangerColor": "#cb3548",
      "drawerBackgroundColor": "#343a42",
      "drawerBoxShadow": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
      "drawerPadding": "10px 15px",
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "h1FontSize": "24px",
      "h1LineHeight": 1.5,
      "h2FontSize": "18px",
      "h2LineHeight": 1.333,
      "h3FontSize": "15px",
      "h3LineHeight": 1.333,
      "h4FontSize": "13px",
      "h4LineHeight": 1.153,
      "h5FontSize": "11px",
      "h5LineHeight": "11px",
      "headingFontWeightBold": 600,
      "headingFontWeightLight": 400,
      "headingSpacing": "10px",
      "horizontalTabButtonBackgroundColor": "#343a42",
      "horizontalTabButtonBorderRadius": "4px",
      "horizontalTabButtonColor": "#96a2b0",
      "horizontalTabButtonColorActive": "#fff",
      "horizontalTabButtonPadding": "10px 15px",
      "horizontalTabButtonSpacingRight": "1px",
      "horizontalTabContainerBackgroundColor": "#343a42",
      "horizontalTabContainerPadding": "10px 15px",
      "indicatorCheckedColor": "#96a2b0",
      "indicatorColor": "#3f454d",
      "indicatorSpacingRight": "5px",
      "infoColor": "#2bdbdb",
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFeedbackFontSize": "13px",
      "inputFeedbackFontWeight": 600,
      "inputFeedbackSpacing": "0px",
      "inputFontSize": "13px",
      "inputFontWeight": 300,
      "inputInvisibleHeight": "38px",
      "inputLineHeight": "40px",
      "inputPadding": "10px 15px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "labelBottomSpacing": "5px",
      "labelFontSize": "11px",
      "labelFontWeight": 400,
      "labelTextColor": "#96a2b0",
      "labelTextColorError": "#cb3548",
      "lineHeightBase": 1.5,
      "mainBackground": "343941",
      "minHeight": "10rem",
      "modalBackgroundColor": "#292d33",
      "modalBorderColor": "#3f454d",
      "modalBorderRadius": "4px",
      "modalBorderStyle": "solid",
      "modalBoxShadow": "0 2px 4px 0 rgba(0, 0, 0, 0.5)",
      "modalMaxWidth": "60rem",
      "modalMinWidth": "20rem",
      "modalOutline": 0,
      "modalWidth": "80%",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "radioFontWeight": 400,
      "radioInactiveBorderColor": "#8C9BA5",
      "radioSpacingRight": "10px",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacing": "10px",
      "spinnerOverlayBackgroundColor": "rgba(52, 58, 66, 0.8)",
      "successColor": "#00bc8c",
      "switcherBorderColor": "#3f454d",
      "switcherBoxShadow": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      "switcherSpacingRight": "10px",
      "textColor": "#fff",
      "textFontFamily": "\\"Open Sans\\", sans-serif",
      "textFontSize": "13px",
      "textFontSizeLarge": "18px",
      "textFontSizeSmall": "13px",
      "textFontSizeXLarge": "24px",
      "textFontSizeXSmall": "11px",
      "textFontWeight": 400,
      "textFontWeightLight": 300,
      "textSpacing": "10px 15px",
      "timeSpanDisplayTextColor": "#96a2b0",
      "tooltipBackgroundColor": "#292d33",
      "tooltipBorderColor": "#40464f",
      "tooltipBorderRadius": "4px",
      "tooltipFontSize": "11px",
      "tooltipHoverOpacity": 0.9,
      "tooltipTextColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "verticalTabButtonActiveBackgroundColor": "#23262C",
      "verticalTabButtonActiveTextColor": "#3f9bfd",
      "verticalTabButtonBackgroundColor": "#24282E",
      "verticalTabButtonPadding": "10px 15px",
      "verticalTabButtonSpacingRight": "1px",
      "verticalTabButtonTextColor": "#fff",
      "verticalTabContainerBackgroundColor": "#343a42",
      "verticalTabContainerPadding": "10px 15px",
      "verticalTabSidebarBackgroundColor": "#292D33",
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "modalContent": 2060,
        "modalOverlay": 2050,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
>
  <InputMask
    guide={false}
    id="currency"
    mask={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="$"
  >
    <t
      guide={false}
      id="currency"
      mask={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="$"
      render={[Function]}
    >
      <Input
        id="currency"
        inputRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="$"
      >
        <Input__InputStyled
          id="currency"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="$"
        >
          <input
            className="Input__InputStyled-cpajrE gnkefq"
            id="currency"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="$"
          />
        </Input__InputStyled>
      </Input>
    </t>
  </InputMask>
</ThemeProvider>
`;

exports[`<MaskedInput /> should render the component with \`percentage mask\` 1`] = `
<ThemeProvider
  theme={
    Object {
      "accordionDividerBorderColor": "#2c3037",
      "accordionHeaderHeight": "45px",
      "bodyBackground": "#292d33",
      "breakpoints": Object {
        "default": Object {
          "minWidth": 768,
        },
        "desktop": Object {
          "maxWidth": 1200,
          "minWidth": 992,
        },
        "largeDesktop": Object {
          "minWidth": 1200,
        },
        "mobile": Object {
          "maxWidth": 768,
          "minWidth": 0,
        },
        "tablet": Object {
          "maxWidth": 992,
          "minWidth": 768,
        },
      },
      "buttonActiveBoxShadow": "inset 0 3px 5px rgba($black, .125)",
      "buttonBorderRadius": "4px",
      "buttonBorderWidth": "1px",
      "buttonDisabledOpacity": 0.65,
      "buttonFocusBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "buttonFontColor": "#fff",
      "buttonFontSize": "13px",
      "buttonFontSizeLarge": "15px",
      "buttonFontSizeSmall": "11px",
      "buttonFontWeight": 300,
      "buttonLineHeight": 1.5,
      "buttonLineHeightLarge": 1.333,
      "buttonLineHeightSmall": 1.5,
      "buttonPaddingSmall": "9px",
      "buttonPaddingX": "15px",
      "buttonPaddingXLarge": "27px",
      "buttonPaddingXSmall": "5px",
      "buttonPaddingY": "10px",
      "buttonPaddingYLarge": "18px",
      "buttonPaddingYSmall": "6px",
      "buttonPaddingYXSmall": "1px",
      "colors": Object {
        "black": "#000",
        "green100": "#00bc8c",
        "green300": "#97e2a3",
        "green500": "#62de76",
        "green700": "#49b85b",
        "green900": "#2f903e",
        "grey100": "#96a2b0",
        "grey1000": "#6d7785",
        "grey1100": "#b2b8c0",
        "grey1200": "#909295",
        "grey1300": "#2c3037",
        "grey200": "#3f454d",
        "grey300": "#343a42",
        "grey400": "#292d33",
        "grey500": "#40464f",
        "grey600": "#8C9BA5",
        "grey700": "#24282E",
        "grey800": "#23262C",
        "grey900": "#292D33",
        "primary100": "#3f9bfd",
        "primary200": "#375f8a",
        "primary300": "#324e70",
        "primary400": "#96a2b0",
        "primary500": "#484e58",
        "red100": "#cb3548",
        "red300": "#9b5a62",
        "red500": "#ff7559",
        "red700": "#d55a41",
        "red900": "#a94442",
        "white": "#fff",
        "yellow100": "#d28a2e",
        "yellow300": "#f7da9f",
        "yellow500": "#ffc859",
        "yellow700": "#d4a546",
        "yellow900": "#ab8433",
      },
      "dangerColor": "#cb3548",
      "drawerBackgroundColor": "#343a42",
      "drawerBoxShadow": "0 2px 34px 0 rgba(0, 0, 0, 0.3)",
      "drawerPadding": "10px 15px",
      "fontSize": Object {
        "bit": "11px",
        "byte": "13px",
        "giga": "24px",
        "kilo": "15px",
        "mega": "18px",
      },
      "fontWeight": Object {
        "bold": 700,
        "light": 300,
        "regular": 400,
        "semiBold": 600,
      },
      "grid": Object {
        "outerGutter": "10px",
      },
      "h1FontSize": "24px",
      "h1LineHeight": 1.5,
      "h2FontSize": "18px",
      "h2LineHeight": 1.333,
      "h3FontSize": "15px",
      "h3LineHeight": 1.333,
      "h4FontSize": "13px",
      "h4LineHeight": 1.153,
      "h5FontSize": "11px",
      "h5LineHeight": "11px",
      "headingFontWeightBold": 600,
      "headingFontWeightLight": 400,
      "headingSpacing": "10px",
      "horizontalTabButtonBackgroundColor": "#343a42",
      "horizontalTabButtonBorderRadius": "4px",
      "horizontalTabButtonColor": "#96a2b0",
      "horizontalTabButtonColorActive": "#fff",
      "horizontalTabButtonPadding": "10px 15px",
      "horizontalTabButtonSpacingRight": "1px",
      "horizontalTabContainerBackgroundColor": "#343a42",
      "horizontalTabContainerPadding": "10px 15px",
      "indicatorCheckedColor": "#96a2b0",
      "indicatorColor": "#3f454d",
      "indicatorSpacingRight": "5px",
      "infoColor": "#2bdbdb",
      "inputBackgroundColor": "#292d33",
      "inputBorderColor": "#3f454d",
      "inputBorderColorHover": "#6d7785",
      "inputBorderRadius": "4px",
      "inputBoxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075)",
      "inputDefaultHeight": "40px",
      "inputDisabledBackgroundColor": "#343a42",
      "inputErrorBorderColor": "#9b5a62",
      "inputFeedbackFontSize": "13px",
      "inputFeedbackFontWeight": 600,
      "inputFeedbackSpacing": "0px",
      "inputFontSize": "13px",
      "inputFontWeight": 300,
      "inputInvisibleHeight": "38px",
      "inputLineHeight": "40px",
      "inputPadding": "10px 15px",
      "inputPlaceholderColor": "#909295",
      "inputTextColor": "#fff",
      "labelBottomSpacing": "5px",
      "labelFontSize": "11px",
      "labelFontWeight": 400,
      "labelTextColor": "#96a2b0",
      "labelTextColorError": "#cb3548",
      "lineHeightBase": 1.5,
      "mainBackground": "343941",
      "minHeight": "10rem",
      "modalBackgroundColor": "#292d33",
      "modalBorderColor": "#3f454d",
      "modalBorderRadius": "4px",
      "modalBorderStyle": "solid",
      "modalBoxShadow": "0 2px 4px 0 rgba(0, 0, 0, 0.5)",
      "modalMaxWidth": "60rem",
      "modalMinWidth": "20rem",
      "modalOutline": 0,
      "modalWidth": "80%",
      "overlayColor": "rgba(25, 29, 35, 0.82)",
      "primaryColor": "#3f9bfd",
      "radioFontWeight": 400,
      "radioInactiveBorderColor": "#8C9BA5",
      "radioSpacingRight": "10px",
      "selectItemDisabledColor": "#96a2b0",
      "selectItemDisabledHoverBackgroundColor": "#292d33",
      "selectItemFocus": "#343a42",
      "selectMultiTagBackgroundColor": "#3f9bfd",
      "selectMultiTagTextColor": "#fff",
      "selectSingleTextColor": "#fff",
      "spacing": "10px",
      "spinnerOverlayBackgroundColor": "rgba(52, 58, 66, 0.8)",
      "successColor": "#00bc8c",
      "switcherBorderColor": "#3f454d",
      "switcherBoxShadow": "0px 0px 1px 5px rgba(255, 255, 255, 0.2)",
      "switcherSpacingRight": "10px",
      "textColor": "#fff",
      "textFontFamily": "\\"Open Sans\\", sans-serif",
      "textFontSize": "13px",
      "textFontSizeLarge": "18px",
      "textFontSizeSmall": "13px",
      "textFontSizeXLarge": "24px",
      "textFontSizeXSmall": "11px",
      "textFontWeight": 400,
      "textFontWeightLight": 300,
      "textSpacing": "10px 15px",
      "timeSpanDisplayTextColor": "#96a2b0",
      "tooltipBackgroundColor": "#292d33",
      "tooltipBorderColor": "#40464f",
      "tooltipBorderRadius": "4px",
      "tooltipFontSize": "11px",
      "tooltipHoverOpacity": 0.9,
      "tooltipTextColor": "#fff",
      "transitions": Object {
        "overlayTransition": "opacity 0.3s ease-out, visibility 0.3s ease-out",
      },
      "verticalTabButtonActiveBackgroundColor": "#23262C",
      "verticalTabButtonActiveTextColor": "#3f9bfd",
      "verticalTabButtonBackgroundColor": "#24282E",
      "verticalTabButtonPadding": "10px 15px",
      "verticalTabButtonSpacingRight": "1px",
      "verticalTabButtonTextColor": "#fff",
      "verticalTabContainerBackgroundColor": "#343a42",
      "verticalTabContainerPadding": "10px 15px",
      "verticalTabSidebarBackgroundColor": "#292D33",
      "warningColor": "#d4a546",
      "zIndex": Object {
        "drawerContent": 2041,
        "drawerOverlay": 2040,
        "loadingBar": 3000,
        "modalContent": 2060,
        "modalOverlay": 2050,
        "navbar": 2030,
        "select": 1090,
        "spinner": 2041,
        "spinnerOverlay": 2040,
        "tooltip": 2020,
      },
    }
  }
>
  <InputMask
    guide={false}
    id="percentage"
    mask={[Function]}
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="%"
  >
    <t
      guide={false}
      id="percentage"
      mask={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="%"
      render={[Function]}
    >
      <Input
        id="percentage"
        inputRef={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="%"
      >
        <Input__InputStyled
          id="percentage"
          innerRef={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="%"
        >
          <input
            className="Input__InputStyled-cpajrE gnkefq"
            id="percentage"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="%"
          />
        </Input__InputStyled>
      </Input>
    </t>
  </InputMask>
</ThemeProvider>
`;
